public/css/style.css
:root {
	--beau-blue: #c9daeaff;
	--red-salsa: #fb3640ff;
	--granite-gray: #605f5eff;
	--cg-blue: #247ba0ff;
	--platinum: #e2e2e2ff;
}

@font-face {
	font-family: Lora;
	src: url(/fonts/Lora-Medium.ttf);
}

body {
	background-image: url('/images/salad_blurred.jpg');
	background-size: cover;
	background-attachment: fixed;
	background-position: 50%;
	color: var(--granite-gray);
	min-height: 95vh;
	display: flex;
	flex-direction: column;
}

footer {
	text-align: center;
	color: var(--platinum);
	margin-top: auto;
}
footer a {
	color: var(--red-salsa);
}

.hamburger_container {
	position: fixed;
	left: 0;
    z-index: 1;
}
.menu_image {
	position: fixed;
	top: 0;
	left: -17vw;
    width: 24vw;
	height: 100vh;
    transition: 0.25s;
}
.menu_button {
	position: absolute;
    height: 3vw;
	left: 0.5vw;
    transition: 0.25s;
}
.nav_button {
    position: relative;
    margin-top: 10px;
    left: -16vw;
    width: 15vw;
	height: 2vw;
	font-family: 'Lora';
	font-size: 1vw;
	color: var(--platinum);
	background-color: var(--red-salsa);
	transition:
        left 0.25s,
        background-color 0.4s;
	border: none;
	box-shadow: 1px 1px 6px var(--granite-gray);
}
.nav_button:hover {
    background-color: var(--granite-gray);
}

#menu_checkbox {
    display: none;
}
#menu_checkbox:checked ~ .menu_image {
    left: 0vw;
}
#menu_checkbox:checked ~ label .menu_button {
    left: 17.5vw;
    content: url('/images/close.png');
}
#menu_checkbox:checked ~ form .nav_button {
    left: 1vw;
}

.creator_page {
	background-image: url('/images/making_salad_blurred.jpg');
}

.container {
	text-align: center;
	height: 80%;
	padding: 25px;
	margin: 5% auto;
	border-radius: 4px;
	color: var(--granite-gray);
	font-size: 16px;
	font-family: 'Lora';
}
.privacy_container {
	background-color: var(--platinum);
	text-align: center;
	width: 60%;
	height: 80%;
	padding: 25px;
	margin: 5% auto;
	border-radius: 4px;
	color: var(--granite-gray);
	font-size: 16px;
}

.register_container {
	text-align: center;
	max-width: 400px;
	min-width: 250px;
	height: 80%;
	padding: 25px;
	margin: 5% auto;
	border-radius: 4px;
	background-color: var(--platinum);
	box-shadow: 6px 6px 6px var(--granite-gray);
}

.text_input {
	border: none;
	background-color: white;
	color: var(--cg-blue);
	text-align: center;
	padding: 15px;
	height: 0px;
	font-size: 16px;
	font-family: 'Lora';
	max-width: 300px;
	box-shadow: 1px 1px 6px var(--granite-gray);
}

.text_input::placeholder {
	color: var(--granite-gray);
}

.text_input:-webkit-autofill,
.text_input:-webkit-autofill:hover,
.text_input:-webkit-autofill:focus,
.text_input:-webkit-autofill:active {
	-webkit-text-fill-color: var(--cg-blue);
}

.title_input {
	border: none;
	background-color: white;
	color: var(--granite-gray);
	text-align: center;
	padding: 25px;
	height: 28px;
	font-size: 24px;
	font-family: 'Lora';
	width: 50%;
	border-radius: 4px 4px 0px 0px;
	box-shadow: 6px 6px 5px var(--granite-gray);
}

.title_input:focus {
	outline: none;
}

.poem_input {
	background-color: white;
	color: var(--granite-gray);
	margin: 0 auto;
	text-align: center;
	width: 50%;
	padding: 25px;
	font-size: 16px;
	font-family: 'Lora';
	border-radius: 0px 0px 4px 4px;
	box-shadow: 6px 6px 5px var(--granite-gray);
	border: none;
}

.poem_input:focus {
	outline: none;
}

.post_container {
    width: 50vw;
    margin: 40px auto;
}

.post {
	background-color: white;
	text-align: center;
	padding: 25px;
	border-radius: 4px;
	box-shadow: 6px 6px 6px #605f5e88;
    margin: -10px auto;
}

.poem_container {
	display: flex;
	justify-content: center;
	text-align: center;
	width: 100%;
}

.binding {
    margin: 0 auto;
    width: 50vw;
}

.poem {
	text-align: left;
}

.remove_icon {
	float: right;
	width: 40px;
}

.remove_icon:hover {
	content: url('/images/trash_open.png');
}

.modal {
	display: none;
	position: fixed;
	z-index: 1;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	overflow: auto;
	padding-top: 50px;
}

.modal_container {
	background-color: white;
	text-align: center;
	max-width: 400px;
	min-width: 250px;
	height: 180px;
	padding: 25px;
	margin: 5% auto;
	border-radius: 4px;
	box-shadow: 6px 6px 6px var(--granite-gray);
}

.like_counter {
	display: inline-block;
	text-align: center;
	margin-right: 15px;
	width: 25px;
}

.dislike_counter {
	display: inline-block;
	text-align: center;
	margin-left: 15px;
	width: 25px;
}

.feedback_container {
	margin: 0 auto;
	margin-top: 25px;
	width: 100px;
	height: 43px;
	overflow: hidden;
}

.feedback {
	width: 40px;
}
.feedback:hover {
	animation: pulse-animation 2s infinite;
}
@keyframes pulse-animation {
	1% {
		width: 38px;
	}
	5% {
		width: 42px;
	}
	7% {
		width: 40px;
	}
}
.like {
	float: left;
}
.dislike {
	float: right;
}

.button {
	width: 100px;
	height: 30px;
	font-family: 'Lora';
	font-size: 16px;
	color: var(--platinum);
	background-color: var(--red-salsa);
	transition: 0.4s;
	border: none;
	box-shadow: 1px 1px 6px var(--granite-gray);
}

.link {
	font-family: 'Lora';
	font-size: 16px;
	text-align: center;
	color: var(--red-salsa);
}

.link_container {
	margin: 10px auto;
	text-align: center;
}

.select {
	background-color: white;
	width: 200px;
	height: 30px;
	font-family: 'Lora';
	font-size: 16px;
	color: var(--granite-gray);
	border: none;
	margin: 0px auto;
	box-shadow: 1px 1px 6px var(--granite-gray);
}

.select:focus {
	outline: none;
}

.post_filter {
	background-color: var(--platinum);
	border: none;
	color: var(--granite-gray);
	font-size: 16px;
	font-family: 'Lora';
}

.title {
	margin: 0 auto;
}

.name_display {
	text-align: left;
}

.button:hover {
	background-color: var(--granite-gray);
}

.incorrect {
	font-family: 'Lora';
	font-size: 14px;
	color: var(--red-salsa);
}

#line {
	width: 500px;
}

@media only screen and (max-width: 880px) {

	.post_container, .binding {
		width: 75vw;
	}

}

@media only screen and (max-width: 500px) {
	.menu_image {
		left: -60vw;
		width: 75vw;
		height: 100vh;
	}
	.menu_button {
		position: absolute;
		height: 4vw;
		left: 1vw;
	}
	.nav_button {
		position: relative;
		left: -59vw;
		width: 55vw;
		height: 8vw;
		font-size: 4vw;
	}	
	#menu_checkbox:checked ~ label .menu_button {
		left: 61vw;
	}
	#menu_checkbox:checked ~ form .nav_button {
		left: 1vw;
	}
}

